# octobot

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile.toml  README.md  deny.toml  diesel.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: docker.yml  rust.yml
migrations/2022-06-16-064150_create_member/: down.sql  up.sql
migrations/2022-06-16-075251_create_report/: up.sql
migrations/2022-08-21-185511_create_summary/: down.sql  up.sql
migrations/2022-08-21-185524_create_report/: up.sql
migrations/2022-08-21-190623_create_meeting/: down.sql  up.sql
migrations/2022-08-21-192110_create_meeting_members/: down.sql  up.sql
migrations/2022-09-07-081531_add__message_id_to_summary/: down.sql  up.sql
migrations/2022-09-07-081531_add_messages_id_to_summary/: down.sql  up.sql
migrations/2022-10-01-043454_add_apprentice/: down.sql  up.sql
migrations/2023-01-17-182938_add_member_role/: down.sql  up.sql
migrations/2023-04-22-141152_add_user_wiki_id/: down.sql  up.sql
migrations/2023-09-21-164337_add_activity_to_members/: down.sql  up.sql
src/: discord.rs  error.rs  main.rs  settings.rs  silent.rs
src/database/: mod.rs  pagination.rs  schema.patch  schema.rs
src/database/models/: meeting.rs  member.rs  mod.rs  report.rs  summary.rs
src/discord/: commands.rs  mod.rs
src/discord/commands/: activity.rs  meeting.rs  member.rs  mod.rs  report.rs  silent.rs  summary.rs
src/framework/: meeting.rs  member.rs  mod.rs  report.rs  summary.rs
src/framework/cache/: mod.rs
src/framework/meeting/: db_meeting.rs  mod.rs
src/framework/meeting/db_meeting/: tests.rs
src/framework/member/: db_member.rs  mod.rs
src/framework/member/db_member/: tests.rs
src/framework/report/: db_report.rs  mod.rs
src/framework/summary/: db_summary.rs  mod.rs
src/meeting/: mod.rs
src/wiki/: mod.rs
wiki/: schema.graphql
wiki/mutations/: assign_user_group.graphql  create_user.graphql  unassign_user_group.graphql
wiki/queries/: search_user.graphql
